WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178783
Available height is wrong for positioned elements with "box-sizing: border-box"
https://bugs.webkit.org/show_bug.cgi?id=178783
Summary
Available height is wrong for positioned elements with "box-sizing: border-box"
Manuel Rego Casasnovas
Reported
2017-10-25 04:53:37 PDT
Created
attachment 324805
[details]
Test case for replaced elements Attaching 2 examples: one using replaced elements (an image) and another one using "-webkit-fill-available" to show the issues with "box-sizing: border-box" in positioned elements.
Attachments
Test case for replaced elements
(413 bytes, text/html)
2017-10-25 04:53 PDT
,
Manuel Rego Casasnovas
no flags
Details
Current vs expected output for replaced elements
(6.56 KB, image/png)
2017-10-25 04:53 PDT
,
Manuel Rego Casasnovas
no flags
Details
Test case for -webkit-fill-available
(328 bytes, text/html)
2017-10-25 04:54 PDT
,
Manuel Rego Casasnovas
no flags
Details
Current vs expected output for -webkit-fill-available
(5.42 KB, image/png)
2017-10-25 04:54 PDT
,
Manuel Rego Casasnovas
no flags
Details
Patch
(10.13 KB, patch)
2017-11-22 07:08 PST
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2017-10-25 04:53:58 PDT
Created
attachment 324806
[details]
Current vs expected output for replaced elements
Manuel Rego Casasnovas
Comment 2
2017-10-25 04:54:14 PDT
Created
attachment 324807
[details]
Test case for -webkit-fill-available
Manuel Rego Casasnovas
Comment 3
2017-10-25 04:54:36 PDT
Created
attachment 324808
[details]
Current vs expected output for -webkit-fill-available
Manuel Rego Casasnovas
Comment 4
2017-11-22 07:08:58 PST
Created
attachment 327451
[details]
Patch
WebKit Commit Bot
Comment 5
2017-11-22 12:37:38 PST
Comment on
attachment 327451
[details]
Patch Clearing flags on attachment: 327451 Committed
r225101
: <
https://trac.webkit.org/changeset/225101
>
WebKit Commit Bot
Comment 6
2017-11-22 12:37:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-11-22 12:38:38 PST
<
rdar://problem/35669543
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug